--- a/Theme_Group_2/BokuNoHeroAcademia.theme.css
+++ b/Theme_Group_2/BokuNoHeroAcademia.theme.css
@@ -158,10 +158,15 @@
     background-color: #668B99;
     color: #fff;
 }
-.theme-dark .divider-3gKybi:not(.red-1YQ4s7) div {
-    background-color: transparent;
+
+
+.theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:before,
+.theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI:before {
+   border-color: transparent;
 }
-.theme-dark .divider-3gKybi:not(.red-1YQ4s7) span {
+
+
+.theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI, .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI {
     color: white;
     background: #668B99;
 }
@@ -569,7 +574,7 @@ a {
 .theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .channelSeparator-1MxuvT .guildName-1Bc3Ta {
     color: rgba(255, 255, 255, 0.7);
 }
-.theme-dark .searchPopout-1vUlP3 {
+.theme-dark .container-3ayLPN {
     background-color: #668B99;
     border: none;
     box-shadow: none;
@@ -588,7 +593,8 @@ a {
 .theme-dark .option-96V44q.selected-rZcOL- {
     background-color: #EFDBCF;
 }
-.theme-dark .option-96V44q.selected-rZcOL-:before {
+.theme-dark .option-96V44q:after, .theme-dark .option-96V44q.selected-rZcOL-:before, 
+.theme-dark .option-96V44q.selected-rZcOL-:after{
     background: none;
 }
 .theme-dark .option-96V44q.user-O3Czj0 .displayUsername-Qekxml {
@@ -738,50 +744,38 @@ a {
 }
 /* Invite Button */
 /* Emote Menu */
-.bda-dark #bda-qem {
+#bda-qem {
     border-bottom: none !important;
     background: transparent;
 }
-.bda-dark #bda-qem button {
+#bda-qem button {
     background: #8EC2C2;
     border-left: none;
     box-shadow: none;
     color: #FFF;
 }
-.bda-dark #bda-qem button.active {
+#bda-qem button.active {
     background-color: #CE693B;
 }
-.bda-dark #bda-qem button:hover {
+#bda-qem button:hover {
     background-color: #EFDBCF;
     color: black;
 }
-.bda-dark #bda-qem-favourite-container, 
-.bda-dark #bda-qem-twitch-container,
-.bda-dark .emoji-picker, 
-.bda-dark .emojiPicker-3m1S-j {
+#bda-qem-favourite-container, 
+#bda-qem-twitch-container,
+.emoji-picker, .emojiPicker-3m1S-j {
     background-color: #668B99;
     border: none;
 }
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
-.bda-dark #pubs-container .scroller::-webkit-scrollbar, 
-.bda-dark #pubs-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #pubs-container .scroller::-webkit-scrollbar-track-piece,
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece,
-.bda-dark .emoji-picker .scroller::-webkit-scrollbar, 
-.bda-dark .emoji-picker .scroller::-webkit-scrollbar-track, 
-.bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
+
+
+
+.scroller-wrap .scroller::-webkit-scrollbar-track-piece, .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent !important;
     border-color: transparent !important;
 }
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, 
 .bda-dark .emoji-picker .scroller::-webkit-scrollbar-thumb, 
 .bda-dark emojiPicker-3g68GS .scroller-3vODG7::-webkit-scrollbar-thumb, 
 .bda-dark #pubs-container .scroller::-webkit-scrollbar-thumb,
@@ -791,8 +785,7 @@ a {
     border-color: #CE693B !important;
     background-color: #CE693B !important;
 }
-.bda-dark .emoji-picker .header .search-bar, 
-.bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
+.emojiPicker-3m1S-j .header-1nkwgG .search-bar {
     background-color: transparent;
 }
 .search-bar-light .searchBarInner-1_Tg2R {
@@ -803,20 +796,18 @@ a {
 .emojiPicker-3m1S-j .header-1nkwgG {
     border-bottom: none;
 }
-.bda-dark .emoji-picker .category, 
-.bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
+.emojiPicker-3m1S-j .category-2U57w6 {
     background-color: #668B99;
     color: white;
 }
 .emojiPicker-3m1S-j .stickyHeader-1SS0JU {
     background: transparent;
 }
-.bda-dark .emoji-picker .dimmer.visible, 
-.bda-dark .emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ {
+.emoji-picker .dimmer.visible, 
+.emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ {
     background-color: rgba(0,0,0,0.65);
 }
-.bda-dark .emoji-picker .diversity-selector .popout-3sVMXz, 
-.bda-dark .emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
+.diversitySelector-tmmMv0 .popout-2nUePc {
     background: #668B99;
     border-color: #668B99;
 }
