--- a/Theme_Group_1/TouhouLibrary.theme.css
+++ b/Theme_Group_1/TouhouLibrary.theme.css
@@ -136,10 +136,19 @@
     background-color: rgba(0, 0, 0,.3) !important;
 }
 
-.theme-dark .divider-3gKybi:not(.red-1YQ4s7) div {
-    background: transparent;
+
+.theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:before,
+.theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI:before {
+   border-color: transparent;
 }
-.theme-dark .divider-3gKybi:not(.red-1YQ4s7) span {
+
+.theme-dark .option-96V44q:after {
+   background: none;
+}
+
+
+
+.theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI, .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI {
     color: white;
     background-color: rgba(0,0,0,0.3);
     border-radius: 0px;
@@ -366,15 +375,15 @@ a,
     text-shadow: 0 0 6px red, 0 0 6px red, 0 0 6px red;
 }
 *::-webkit-scrollbar-track-piece,
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
 .bda-dark #pubs-container .scroller::-webkit-scrollbar, 
 .bda-dark #pubs-container .scroller::-webkit-scrollbar-track, 
 .bda-dark #pubs-container .scroller::-webkit-scrollbar-track-piece,
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece,
+#bda-qem-favourite-container .scroller::-webkit-scrollbar, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece,
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track,
 .bda-dark .emoji-picker .scroller::-webkit-scrollbar, 
 .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track, 
@@ -386,14 +395,20 @@ a,
     border-color: transparent !important;
 }
 *::-webkit-scrollbar-thumb,
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, 
 .bda-dark .emoji-picker .scroller::-webkit-scrollbar-thumb, 
 .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-thumb, 
 .bda-dark #pubs-container .scroller::-webkit-scrollbar-thumb {
     background-color: rgba(0,0,0,0.3) !important;
     border-color: transparent !important;
 }
+
+.emojiPicker-3m1S-j .stickyHeader-1SS0JU {
+    background: transparent;
+}
+
+
 .theme-dark .autocomplete-1vrmpx {
     background-color: rgba(0, 0, 0,0.34);
 }
@@ -1239,7 +1254,7 @@ a,
 .theme-dark .option-96V44q.selected-rZcOL- {
    background: rgba(112, 84, 53,0.3);
 }
-.theme-dark .searchPopout-1vUlP3,
+.theme-dark .container-3ayLPN,
 .theme-dark .searchAnswer-3Dz2-q, .theme-dark .searchFilter-2ESiM3,
 .theme-dark .calendarPicker-2yf6Ci .react-datepicker,
 .theme-dark .calendarPicker-2yf6Ci .react-datepicker__header {
@@ -1415,7 +1430,7 @@ a,
     padding-right: 25px;
 }
 /* Emote Menu */
-.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+#bda-qem-favourite-container, #bda-qem-twitch-container, .emoji-picker, .emojiPicker-3m1S-j {
     background-color: black;
     border-radius: 0px;
     border: none;
@@ -1427,41 +1442,27 @@ a,
 .emojiPicker-3m1S-j .header-1nkwgG {
     border-bottom: none;
 }
-.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
+.emoji-picker .category, .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: #705435;
     color: white;
 }
-.bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
+.emojiPicker-3m1S-j .header-1nkwgG .search-bar {
     background-color: transparent;
 }
 .emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ  {
     background-color: rgba(0,0,0,0.65);
 }
-.bda-dark .emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
+.diversitySelector-tmmMv0 .popout-2nUePc {
     background: black;
     border-color: transparent;
 }
-.bda-dark .emoji-picker .scroller::-webkit-scrollbar, 
-.bda-dark .emoji-picker .scroller::-webkit-scrollbar-track,
-.bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece,
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
-.bda-dark #pubs-container .scroller::-webkit-scrollbar, 
-.bda-dark #pubs-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #pubs-container .scroller::-webkit-scrollbar-track-piece,
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece {
+.scroller-wrap .scroller::-webkit-scrollbar-track-piece, .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent !important;
     border-color: transparent !important;
 }
 .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG:: -webkit-scrollbar-thumb,.theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG:: -webkit-scrollbar-thumb,.theme-light .scrollerWrap-2lJEkd .scroller-2FKFPG:: -webkit-scrollbar-thumb,
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, 
 .bda-dark .emoji-picker .scroller::-webkit-scrollbar-thumb, 
 .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-thumb, 
 .bda-dark #pubs-container .scroller::-webkit-scrollbar-thumb {
@@ -1472,19 +1473,19 @@ a,
 .emojiPicker-3m1S-j .categories-1feg4n .item-16cXuq.selected-39BZ4S {
     border-bottom-color: #705435;
 }
-.bda-dark #bda-qem {
+#bda-qem {
     border-bottom: none !important;
     background: transparent;
 }
-.bda-dark #bda-qem button {
+#bda-qem button {
     background: black;
     border-left: none;
     box-shadow: none;
 }
-.bda-dark #bda-qem button:hover {
+#bda-qem button:hover {
     background-color: #161719;
 }
-.bda-dark #bda-qem button.active {
+#bda-qem button.active {
     background-color:#705435;
 }
 /* Notification Settings */
