--- a/Theme_Group_2/Twitch.theme.css
+++ b/Theme_Group_2/Twitch.theme.css
@@ -1996,8 +1996,8 @@
 
 /***** --- *****/
 
-.theme-dark .searchPopout-1vUlP3 {
-  background-color: #6441a5;
+.theme-dark .container-3ayLPN {
+  background-color: #6441a5 !important;
   /*Primary Color*/
   border: none;
   box-shadow: none;
