--- a/Theme_Group_2/BokuNoHeroAcademia.theme.css
+++ b/Theme_Group_2/BokuNoHeroAcademia.theme.css
@@ -209,7 +209,7 @@
 .theme-dark .descriptionDiscriminator-3vUOCc,
 .theme-dark .description-11DmNu, 
 .theme-dark .descriptionUsername-J_75O8,
-.theme-dark .message-group .edit-message .edit-operation,
+.theme-dark .operations-36ENbA,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
@@ -217,7 +217,7 @@
     fill: white;
 }
 
-.message-group .edit-message .edit-operation>a {
+.operations-36ENbA>a {
     color: #668B99;
 }
 .small-5Os1Bb .statusTyping-2ed9jJ {
