--- a/Theme_Group_1/Bubble.theme.css
+++ b/Theme_Group_1/Bubble.theme.css
@@ -325,7 +325,7 @@
     background-color: #E7FEFF;
 }
 
-.theme-dark .message-group .edit-message .edit-operation,
+.theme-dark .operations-36ENbA,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
@@ -1582,11 +1582,7 @@ a {
     background: black;
     border-color: transparent;
 }
-<<<<<<< HEAD
 .scroller-wrap .scroller::-webkit-scrollbar-track-piece, .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
-=======
-.scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
->>>>>>> c4df53773be6b8912de6d414b7da45b251492f69
     background-color: transparent !important;
     border-color: transparent !important;
 }
