--- a/Theme_Group_2/Danganronpa.theme.css
+++ b/Theme_Group_2/Danganronpa.theme.css
@@ -211,14 +211,14 @@
 .theme-dark .descriptionDiscriminator-3vUOCc,
 .theme-dark .description-11DmNu, 
 .theme-dark .descriptionUsername-J_75O8,
-.theme-dark .message-group .edit-message .edit-operation,
+.theme-dark .operations-36ENbA,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
 .theme-dark .iconForeground-1w5n7R {
     fill: white;
 }
-.message-group .edit-message .edit-operation>a {
+.operations-36ENbA>a {
     color:  #5088A3;
 }
 .small-5Os1Bb .statusTyping-2ed9jJ {
