--- a/Theme_Group_1/NGNL.theme.css
+++ b/Theme_Group_1/NGNL.theme.css
@@ -395,10 +395,10 @@ a,
     margin-left: -5px;
     margin-right: 6px;
 }
-.theme-dark .message-group .edit-message .edit-operation {
+.theme-dark .operations-36ENbA {
     color: rgb(255, 255, 255);
 }
-.message-group .edit-message .edit-operation>a {
+.operations-36ENbA>a {
     color: #840058;
 }
 /* Bot Tag */
@@ -1201,11 +1201,7 @@ a,
     background: black;
     border-color: transparent;
 }
-<<<<<<< HEAD
 .scroller-wrap .scroller::-webkit-scrollbar-track-piece, .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
-=======
-.scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
->>>>>>> c4df53773be6b8912de6d414b7da45b251492f69
     background-color: transparent !important;
     border-color: transparent !important;
 }
