--- a/Theme_Group_1/TouhouLibrary.theme.css
+++ b/Theme_Group_1/TouhouLibrary.theme.css
@@ -524,10 +524,10 @@ a,
 .theme-dark .markup-2BOw-j code.inline {
     background: rgba(0,0,0,0.3);
 }
-.message-group .edit-message .edit-operation>a {
+.operations-36ENbA>a {
     color: #EFD9C3;
 }
-.theme-dark .message-group .edit-message .edit-operation,
+.theme-dark .operations-36ENbA,
 .theme-dark .edited-DL9ECl {
     color: white;
 }
@@ -1456,11 +1456,7 @@ a,
     background: black;
     border-color: transparent;
 }
-<<<<<<< HEAD
 .scroller-wrap .scroller::-webkit-scrollbar-track-piece, .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
-=======
-.scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
->>>>>>> c4df53773be6b8912de6d414b7da45b251492f69
     background-color: transparent !important;
     border-color: transparent !important;
 }
