--- a/Theme_Group_2/Twitch.theme.css
+++ b/Theme_Group_2/Twitch.theme.css
@@ -1288,7 +1288,7 @@
 .theme-dark .descriptionDiscriminator-3vUOCc,
 .theme-dark .description-11DmNu,
 .theme-dark .descriptionUsername-J_75O8,
-.theme-dark .message-group .edit-message .edit-operation,
+.theme-dark .operations-36ENbA,
 .theme-dark .edited-DL9ECl {
   color: white;
 }
